[package]
authors = ["Marcin S. <scatman@bu.edu>"]
description = "OVER: the best data format."
documentation = "https://docs.rs/over"
keywords = [
    "config",
    "format",
    "minimal",
    "intuitive",
    "powerful",
]
license = "MIT"
name = "over"
readme = "README.md"
repository = "https://github.com/m-cat/over"
version = "0.6.4"

edition = "2018"

[dependencies]
lazy_static = "1.0.*"
num-bigint = "0.2.*"
num-rational = "0.2.*"
num-traits = "0.2.*"
